<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/drawer_menu_nav_title">
        <menu>
            <item
                android:id="@+id/action_main"
                android:icon="@drawable/ic_home_black_48dp"
                android:title="@string/drawer_menu_home" />
            <item
                android:id="@+id/slaughtered_sheep"
                android:icon="@drawable/ic_all_out_black_48dp"
                android:title="@string/drawer_menu_slaughtered" />
        </menu>
    </item>


    <item android:title="@string/drawer_menu_other_title">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_48dp"
                android:title="@string/drawer_menu_settings" />
        </menu>
    </item>

</menu>
